cities editable and fixed date issue on safari

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,43 @@
 .grid {
   height: 100%;
 }
+
+.fa-cog {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  color: white;
+  padding: 5px;
+  z-index: 100;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255,255,255,.7);
+  z-index: 1000;
+  .modalContainer {
+    max-width: 250px;
+    margin: 5% auto 0;
+    background: white;
+    padding: 20px;
+    input {
+      border: 0;
+      border-bottom: 1px solid #666;
+      font-size: 24px;
+      margin-bottom: 20px;
+      width: 100%;
+      outline: none;
+    }
+    button {
+      font-size: 18px;
+      background: #222;
+      color: white;
+      border-radius: 4px;
+      padding: 5px 10px;
+    }
+  }
+}
